--- a/GCD0704.AppDev/GCD0704.AppDev.csproj
+++ b/GCD0704.AppDev/GCD0704.AppDev.csproj
@@ -238,6 +238,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Todos\Index.cshtml" />
+    <Content Include="Views\Todos\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
