--- a/GCD0704.AppDev/GCD0704.AppDev.csproj
+++ b/GCD0704.AppDev/GCD0704.AppDev.csproj
@@ -174,7 +174,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101120608398_CreateTodosTable.cs" />
+    <Compile Include="Migrations\202101120608398_CreateTodosTable.Designer.cs">
+      <DependentUpon>202101120608398_CreateTodosTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Todo.cs" />
@@ -255,6 +261,11 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202101120608398_CreateTodosTable.resx">
+      <DependentUpon>202101120608398_CreateTodosTable.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
