--- a/GCD0704.AppDev/GCD0704.AppDev.csproj
+++ b/GCD0704.AppDev/GCD0704.AppDev.csproj
@@ -178,6 +178,10 @@
     <Compile Include="Migrations\202101120608398_CreateTodosTable.Designer.cs">
       <DependentUpon>202101120608398_CreateTodosTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101140642119_UpdateTodoModel.cs" />
+    <Compile Include="Migrations\202101140642119_UpdateTodoModel.Designer.cs">
+      <DependentUpon>202101140642119_UpdateTodoModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -267,6 +271,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202101120608398_CreateTodosTable.resx">
       <DependentUpon>202101120608398_CreateTodosTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101140642119_UpdateTodoModel.resx">
+      <DependentUpon>202101140642119_UpdateTodoModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
