--- a/GCD0704.AppDev/GCD0704.AppDev.csproj
+++ b/GCD0704.AppDev/GCD0704.AppDev.csproj
@@ -182,9 +182,14 @@
     <Compile Include="Migrations\202101140642119_UpdateTodoModel.Designer.cs">
       <DependentUpon>202101140642119_UpdateTodoModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101140720147_CreateCategoriesTable.cs" />
+    <Compile Include="Migrations\202101140720147_CreateCategoriesTable.Designer.cs">
+      <DependentUpon>202101140720147_CreateCategoriesTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\Category.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Todo.cs" />
@@ -274,6 +279,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202101140642119_UpdateTodoModel.resx">
       <DependentUpon>202101140642119_UpdateTodoModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101140720147_CreateCategoriesTable.resx">
+      <DependentUpon>202101140720147_CreateCategoriesTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
