--- a/GCD0704.AppDev/GCD0704.AppDev.csproj
+++ b/GCD0704.AppDev/GCD0704.AppDev.csproj
@@ -186,6 +186,10 @@
     <Compile Include="Migrations\202101140720147_CreateCategoriesTable.Designer.cs">
       <DependentUpon>202101140720147_CreateCategoriesTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101140722432_AddCategoryFKToTodoModel.cs" />
+    <Compile Include="Migrations\202101140722432_AddCategoryFKToTodoModel.Designer.cs">
+      <DependentUpon>202101140722432_AddCategoryFKToTodoModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -282,6 +286,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202101140720147_CreateCategoriesTable.resx">
       <DependentUpon>202101140720147_CreateCategoriesTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101140722432_AddCategoryFKToTodoModel.resx">
+      <DependentUpon>202101140722432_AddCategoryFKToTodoModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
