--- a/GCD0704.AppDev/GCD0704.AppDev.csproj
+++ b/GCD0704.AppDev/GCD0704.AppDev.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -45,10 +46,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -112,12 +121,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core">
       <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.3\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
     </Reference>
@@ -168,27 +171,20 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\TodosController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202101120608398_CreateTodosTable.cs" />
-    <Compile Include="Migrations\202101120608398_CreateTodosTable.Designer.cs">
-      <DependentUpon>202101120608398_CreateTodosTable.cs</DependentUpon>
+    <Compile Include="Migrations\202101190645382_clonerepo.cs" />
+    <Compile Include="Migrations\202101190645382_clonerepo.designer.cs">
+      <DependentUpon>202101190645382_clonerepo.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202101140642119_UpdateTodoModel.cs" />
-    <Compile Include="Migrations\202101140642119_UpdateTodoModel.Designer.cs">
-      <DependentUpon>202101140642119_UpdateTodoModel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202101140720147_CreateCategoriesTable.cs" />
-    <Compile Include="Migrations\202101140720147_CreateCategoriesTable.Designer.cs">
-      <DependentUpon>202101140720147_CreateCategoriesTable.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202101140722432_AddCategoryFKToTodoModel.cs" />
-    <Compile Include="Migrations\202101140722432_AddCategoryFKToTodoModel.Designer.cs">
-      <DependentUpon>202101140722432_AddCategoryFKToTodoModel.cs</DependentUpon>
+    <Compile Include="Migrations\202101190649024_addTodoUserTable.cs" />
+    <Compile Include="Migrations\202101190649024_addTodoUserTable.designer.cs">
+      <DependentUpon>202101190649024_addTodoUserTable.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -197,6 +193,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Todo.cs" />
+    <Compile Include="Models\TodoUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\TodoCategoriesViewModel.cs" />
@@ -261,6 +258,7 @@
     <Content Include="Views\Todos\Details.cshtml" />
     <Content Include="Views\Todos\Create.cshtml" />
     <Content Include="Views\Todos\Edit.cshtml" />
+    <Content Include="Views\Admin\Profiles.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -279,17 +277,11 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202101120608398_CreateTodosTable.resx">
-      <DependentUpon>202101120608398_CreateTodosTable.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202101190645382_clonerepo.resx">
+      <DependentUpon>202101190645382_clonerepo.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202101140642119_UpdateTodoModel.resx">
-      <DependentUpon>202101140642119_UpdateTodoModel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202101140720147_CreateCategoriesTable.resx">
-      <DependentUpon>202101140720147_CreateCategoriesTable.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202101140722432_AddCategoryFKToTodoModel.resx">
-      <DependentUpon>202101140722432_AddCategoryFKToTodoModel.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202101190649024_addTodoUserTable.resx">
+      <DependentUpon>202101190649024_addTodoUserTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
@@ -325,7 +317,10 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
+    <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.props'))" />
+    <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.targets'))" />
   </Target>
+  <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
